#2623 fix wrong font for webhook history

--- a/public/less/_markdown.less
+++ b/public/less/_markdown.less
@@ -1,4 +1,4 @@
-.markdown {
+.markdown:not(code) {
 	overflow: hidden;
 	font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif;
 	font-size: 16px;
